--- a/pages/project.html
+++ b/pages/project.html
@@ -71,7 +71,7 @@
                     </li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropbtn">BLOGS</a>
+                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
                             <a href="#">DevOps</a>
@@ -182,7 +182,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../pages/project.html">Project</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="../pages/blogs.html">BLOGS</a></li>
                         <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
