--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -99,7 +99,7 @@
                     </li>
 
                     <li class="dropdown">
-                        <button class="dropbtn">BLOGS</button>
+                        <a href="../pages/blogs.html" class="dropbtn">BLOGS</a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
                             <a href="#">DevOps</a>
@@ -173,7 +173,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../pages/project.html">Project</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="../pages/blogs.html">BLOGS</a></li>
                         <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
